--- a/src/app/menu/bicep/bicep.page.html
+++ b/src/app/menu/bicep/bicep.page.html
@@ -1,9 +1,49 @@
 <ion-header>
   <ion-toolbar>
+    <ion-icon expand="block" [routerLink]="['..']" routerLinkActive="router-link-active" slot="start" name="caret-back"> </ion-icon>
     <ion-title>bicep</ion-title>
+
   </ion-toolbar>
+
+
 </ion-header>
 
+
 <ion-content>
+  <ion-text color="primary">
+  <h1>Ejercicios de Bicep</h1>
+</ion-text>
+<ion-card>
+  <h2>Curl con barra</h2>
+<p>Es uno de los ejercicios de bíceps más tradicionales porque agranda su tamaño y aumenta su fuerza.
+   También es un ejercicio simple de hacer.</p>
+
+<p> Para realizarlo, se necesita una barra recta con agarre debajo de la mano.
+   Este debe ser más ancho que los hombros. Luego de tenerlo y con el pecho hacia arriba,
+    se deben poner los codos hacia abajo de la articulación del hombro y enrollar la barra hacia arriba con los bíceps, sin que el torso se incline hacia adelante. </p>
+
+    <img src="https://uploads-ssl.webflow.com/609aa41bb752e648eb4cb693/6111b40a786e69c1e0ca5eb7_photo-1574680088814-c9e8a10d8a4d.jpg">
+  </ion-card>
+  <ion-card>
+    <h2>Chin-ups</h2>
+    <p>Este ejercicio ayuda a aumentar la fuerza de la parte superior del cuerpo para los entrenamientos generales de la persona. </p>
+    <p>Para hacerlo se necesita colgar la barra con las muñecas en posición supina. Es decir, con las palmas hacia arriba.
+      Hay que separar las manos al ancho de los hombros y con el peso muerto se debe retraer hacia el cuerpo, mientras que se presiona la escápula para que la espalda esté estable.
+      No dejes que el cuerpo se doble hacia adentro para hacerlo correctamente. </p>
+      <img src="https://uploads-ssl.webflow.com/609aa41bb752e648eb4cb693/6111b4e5bbdcb46ca90b2154_photo-1520334435999-d992362bb3ad.jpg">
+    </ion-card>
+    <ion-card>
+      <h2>Curl con mancuernas</h2>
+      <p>Este ejercicio de curl de bíceps también se llama curl martillo y se basa en colocar las muñecas en una posición neutral donde se aleja el bíceps de los antebrazos.    </p>
+      <p>Con unas mancuernas, se agarran ambas con las manos a los lados, mientras que tu pecho esté alto y tu hombros hacia atrás. Debes levantar las mancuernas hacia arriba pero sin girar la muñeca. Los codos deben estar entre 100 y 130 grados de flexión para que los bíceps se puedan contraer.    </p>
+      <img src="https://uploads-ssl.webflow.com/609aa41bb752e648eb4cb693/6111b565a61c595da16b6e53_photo-1600026453249-24a43274d65a.jpg">
+    </ion-card>
+    <ion-card>
+      <h2>Dominadas supinas</h2>
+      <p>Para este ejercicio solo necesitas una barra horizontal y tu peso corporal. Para llevarlo a cabo, se agarra la barra horizontal al frente de nosotros y la llevamos hacia el cuerpo. Es decir, la barbilla debe alcanzar la altura de la barra y bajarla hacia su posición inicial.   </p>
+      <img src="https://uploads-ssl.webflow.com/609aa41bb752e648eb4cb693/6111b6b544adf40cf5101983_photo-1526506118085-60ce8714f8c5.jpg">
+    </ion-card>
+
 
 </ion-content>
+
