--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -5,7 +5,28 @@
 </ion-header>
 
 <ion-content>
-  <ion-card>
+  <ion-grid>
+    <ion-row>
+      <ion-col *ngFor="let card of rutineCards">
+        <ion-card [routerLink]="[card.url]" routerLinkActive="router-link-active">
+            <ion-card-header>
+              <ion-card-title>{{card.title}}</ion-card-title>
+              <ion-card-subtitle>{{card.description}}</ion-card-subtitle>
+            </ion-card-header>
+            <ion-card-content>
+              <ion-item>
+                <ion-img [src]="card.img"></ion-img>
+              </ion-item>
+            </ion-card-content>
+          </ion-card>
+
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</ion-content>
+
+
+<!-- <ion-card>
     <ion-card-header>
       <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
       <ion-card-title>Card Title</ion-card-title>
@@ -15,5 +36,4 @@
       Keep close to Nature's heart... and break clear away, once in awhile,
       and climb a mountain or spend a week in the woods. Wash your spirit clean.
     </ion-card-content>
-  </ion-card>
-</ion-content>
+  </ion-card> -->
