--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -7,11 +7,11 @@
 <ion-content>
   <ion-grid>
     <ion-row>
-      <ion-col *ngFor="let card of rutineCards">
+      <ion-col *ngFor="let card of abdomenCard">
         <ion-card [routerLink]="[card.url]" routerLinkActive="router-link-active">
             <ion-card-header>
-              <ion-card-title>{{card.title}}</ion-card-title>
-              <ion-card-subtitle>{{card.description}}</ion-card-subtitle>
+              <ion-card-title>{{card.nombre}}</ion-card-title>
+              <ion-card-subtitle>{{card.descripcion}}</ion-card-subtitle>
             </ion-card-header>
             <ion-card-content>
               <ion-item>
