--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -7,10 +7,10 @@
 <ion-content>
   <ion-grid>
     <ion-row>
-      <ion-col *ngFor="let card of abdomenCard">
+      <ion-col sizeXs="12" sizeSm="3" sizeSm="6" sizeMd="12" sizeXl="12" *ngFor="let card of rutineCards">
         <ion-card [routerLink]="[card.url]" routerLinkActive="router-link-active">
             <ion-card-header>
-              <ion-card-title>{{card.nombre}}</ion-card-title>
+              <ion-card-title>{{card.title}}</ion-card-title>
               <ion-card-subtitle>{{card.descripcion}}</ion-card-subtitle>
             </ion-card-header>
             <ion-card-content>
