--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,13 +17,13 @@
         <ion-list id="labels-list">
           <ion-list-header>Rutinas</ion-list-header>
 
-          <ion-item *ngFor="let label of labels" lines="none">
+          <ion-item  *ngFor="let label of labels" lines="none" (click)="labelClick(label)">
             <ion-icon slot="start" ios="bookmark-outline" md="bookmark-sharp"></ion-icon>
-            <ion-label>{{ label }}</ion-label>
+            <ion-label class="ion-text-wrap">{{ label.nombre }}</ion-label>
           </ion-item>
         </ion-list>
       </ion-content>
     </ion-menu>
-    <ion-router-outlet id="main-content"></ion-router-outlet>
+    <ion-router-outlet (activate)="onActivate($event);" id="main-content"></ion-router-outlet>
   </ion-split-pane>
 </ion-app>
