Co-authored-by: MARTINEZ HERNANDEZ CESAR URIEL <al20310513@utcj.edu.mx>

--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -1,22 +1,18 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-icon expand="block" [routerLink]="['../menu']" routerLinkActive="router-link-active" slot="start" name="caret-back">
-  </ion-icon>
-  <ion-title>Inicio</ion-title>
-  </ion-toolbar>
 
+
+<ion-header>
+<ion-toolbar>
+  <ion-icon expand="block" [routerLink]="['../menu']" routerLinkActive="router-link-active" slot="start" name="caret-back">
+  </ion-icon>
+  <ion-title>inicio</ion-title>
+
+</ion-toolbar>
 </ion-header>
 
 <ion-content>
-
-  <ion-col>
-    <div class="ion-text-center">
-
 <ion-text color="primary">
   <h1>GMY CUMH</h1>
 </ion-text>
-</div>
-</ion-col>
 <ion-card>
   <h3>Sabes que hacer ejercicio es bueno para ti, ¿pero sabes cuán bueno es? Descubre de qué manera puede enriquecer tu vida el ejercicio: desde levantar tu estado de ánimo hasta mejorar tu vida </h3>
 <p>¿Quieres sentirte mejor, tener más energía, y hasta agregar años a tu vida? Solo tienes que hacer ejercicio.</p>
@@ -34,7 +30,7 @@
 </P>
 <P>Así que toma una clase de baile, recorre las rutas de senderismo o inscríbete en un equipo de fútbol. Busca una actividad física que disfrutes y hazla. ¿Sentías aburrimiento? Prueba algo nuevo o haz algo con amigos o familiares. </P>
 
+  </ion-card>
 
-</ion-card>
 </ion-content>
 
