--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,18 +6,32 @@
           <ion-list-header>test</ion-list-header>
           <ion-note>hi@ets.com</ion-note>
 
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
-            <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
-              <ion-icon slot="start" [ios]="p.icon + '-outline'" [md]="p.icon"></ion-icon>
-              <ion-label>{{ p.title }}</ion-label>
-            </ion-item>
+          <ion-item routerLink="inicio" slot="header">
+            <ion-icon slot="start" ios="home-outline" md="home-outline"></ion-icon>
+            <ion-label>Inicio</ion-label>
+          </ion-item>
+
+          <ion-menu-toggle auto-hide="false">
+            <ion-accordion-group>
+              <ion-accordion value="colors">
+                <ion-item slot="header">
+                  <ion-label routerLink="menu" >Rutinas</ion-label>
+                </ion-item>
+
+                <ion-list *ngFor="let p of appPages" slot="content">
+                  <ion-item [routerLink]="[p.url]" lines="none" detail="false"
+                    routerLinkActive="selected">
+                    <ion-icon name="caret-forward-outline"></ion-icon>
+                    <ion-label>{{ p.title }}</ion-label>
+                  </ion-item>
+                </ion-list>
+              </ion-accordion>
+            </ion-accordion-group>
           </ion-menu-toggle>
         </ion-list>
 
         <ion-list id="labels-list">
-          <ion-list-header>Rutinas</ion-list-header>
-
-          <ion-item  *ngFor="let label of labels" lines="none" (click)="labelClick(label)">
+          <ion-item *ngFor="let label of labels" lines="none" (click)="labelClick(label)">
             <ion-icon slot="start" ios="bookmark-outline" md="bookmark-sharp"></ion-icon>
             <ion-label class="ion-text-wrap">{{ label.nombre }}</ion-label>
           </ion-item>
