--- a/src/app/menu/triceps/triceps.page.html
+++ b/src/app/menu/triceps/triceps.page.html
@@ -29,4 +29,8 @@
       </ion-item>
     </ion-card-content>
   </ion-card>
+  <ion-card>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/dKsLaEljeXg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</ion-card>
+
 </ion-content>
