--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -10,9 +10,11 @@
 </ion-header>
 
 <ion-content>
+  <div class="ion-text-center">
 <ion-text color="primary">
   <h1>GMY CUMH</h1>
 </ion-text>
+</div>
 <ion-card>
   <h3>Sabes que hacer ejercicio es bueno para ti, ¿pero sabes cuán bueno es? Descubre de qué manera puede enriquecer tu vida el ejercicio: desde levantar tu estado de ánimo hasta mejorar tu vida </h3>
 <p>¿Quieres sentirte mejor, tener más energía, y hasta agregar años a tu vida? Solo tienes que hacer ejercicio.</p>
@@ -30,7 +32,8 @@
 </P>
 <P>Así que toma una clase de baile, recorre las rutas de senderismo o inscríbete en un equipo de fútbol. Busca una actividad física que disfrutes y hazla. ¿Sentías aburrimiento? Prueba algo nuevo o haz algo con amigos o familiares. </P>
 
-  </ion-card>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/A5wqXRv0DIQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+</ion-card>
 </ion-content>
 
